--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>FRWD</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <nav>
+        <!-- syed -->
+      </nav>
+      <main>
+        <!-- rahul and pradeep -->
+      </main>
+
+      <footer>
+        <!-- mahesh -->
+      </footer>
+    </div>
+  </body>
 </html>
 <script src="index.js"></script>
