--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="">562-407-3230</a>
             <a href="">Customer Care</a>
             <a href="">Track Your Order</a>
-            <a href="">Shipping & Returns</a>
+            <a href="">Shipping \& Returns</a>
             <a href="">Live Chat</a>
             <a href="">Gift Certificates</a>
             <a href="">Accessibility Statement</a>
@@ -49,7 +49,7 @@
           <div id="malist3">
             <p>NEWSLETTER</p>
             <p>
-              Be the first to know about new arrivals, sales & promos by
+              Be the first to know about new arrivals, sales \& promos by
               submitting your email. You can opt out at any time.
             </p>
             <a href="">privacy policy</a><br />
