Kendalls page created

--- a/Kendalls.html
+++ b/Kendalls.html
@@ -11,8 +11,53 @@
       <nav>
         <!-- syed -->
       </nav>
-      <main>
-        <!-- rahul and pradeep -->
+      <main id="maimg1">
+        <!-- mahesh -->
+        <div id="maheadings">
+          <p>KENDALL JENNER FOR FWRD</p>
+          <p>BY SEAN THOMAS</p>
+        </div>
+        <img
+          src="https://is4.revolveassets.com/images/up/2023/December/010124_f_KJ_LP_01_2x.jpg"
+          alt=""
+          width="1600px"
+        />
+
+        <img
+          src="https://is4.revolveassets.com/images/up/2023/December/010124_f_KJ_LP_02_2x.jpg"
+          alt=""
+          width="1600px"
+        />
+
+        <img
+          src="https://is4.revolveassets.com/images/up/2023/December/010124_f_KJ_LP_03_2x.jpg"
+          alt=""
+          width="1600px"
+        />
+
+        <img
+          src="https://is4.revolveassets.com/images/up/2023/December/010124_f_KJ_LP_04_2x.jpg"
+          alt=""
+          width="1600px"
+        />
+        <img
+          src="https://is4.revolveassets.com/images/up/2023/December/010124_f_KJ_LP_06_2x.jpg"
+          alt=""
+          width="1600px"
+        />
+        <img
+          src="https://is4.revolveassets.com/images/up/2023/December/010124_f_KJ_LP_07_2x.jpg"
+          alt=""
+          width="1600px"
+        />
+        <img
+          src="https://is4.revolveassets.com/images/up/2023/December/010124_f_KJ_LP_08_2x.jpg"
+          alt=""
+          width="1600px"
+        />
+        <div id="ma1">
+          <a href="">SHOP NEW ARRIVALS</a>
+        </div>
       </main>
 
       <footer>
