--- a/html/signinup.html
+++ b/html/signinup.html
@@ -19,15 +19,15 @@
     <div id="maforms">
       <form action="" id="masignin1">
         <p>SIGN IN TO MY ACCOUNT</p>
-        <input type="text" placeholder="email" /><br />
-        <input type="password" placeholder="password" />
+        <input type="text" placeholder="email" id="signinmail" /><br />
+        <input type="password" placeholder="password" id="signinpass" />
         <div id="masmall">
           <div style="margin: 10px">
-            <input type="checkbox" /> <label for="">Remember me</label>
+            <input type="checkbox" checked /> <label for="">Remember me</label>
           </div>
           <a href="">Forgot your password?</a>
         </div>
-        <button class="mabtn">SIGN IN</button>
+        <button class="mabtn" id="signin">SIGN IN</button>
       </form>
       <form action="" id="masignup">
         <p>CREATE AN ACCOUNT</p>
@@ -57,26 +57,18 @@
           </label>
         </div>
         <div id="maradios">
-          <input
-            type="radio"
-            name="gender"
-            value="women"
-            class="signupgender"
-          />Women
-          <input
-            type="radio"
-            name="gender"
-            value="men"
-            class="signupgender"
-          />Men
-          <input
-            type="radio"
-            name="gender"
-            value="both"
-            class="signupgender"
-          />Both
+          <label for="option1">
+            <input type="radio" name="gender" value="women" id="option1" />
+            Women
+          </label>
+          <label for="option2">
+            <input type="radio" name="gender" value="men" id="option2" />Men
+          </label>
+          <label for="option3">
+            <input type="radio" name="gender" value="both" id="option3" />Both
+          </label>
         </div>
-        <button class="mabtn">AGREE AND CONTINUE</button>
+        <button class="mabtn" id="signupbtn">AGREE AND CONTINUE</button>
       </form>
     </div>
     <p id="materms">
@@ -85,4 +77,5 @@
       Please also read our <a href="" class="maclr">Privacy Policy</a>
     </p>
   </body>
+  <script src="../index.js"></script>
 </html>
