Login and signup implemented using json and db demo done

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FRWD</title>
     <link rel="stylesheet" href="../style.css" />
+    <script
+      src="https://kit.fontawesome.com/fff2546269.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="container">
@@ -13,7 +17,7 @@
         <section class="st-container">
           <div id="st-navP1">
             <div>
-              <span><img src="images/flag.png" alt="flag image"></span>
+              <span><img src="images/flag.png" alt="flag image" /></span>
               <i class="fa-solid fa-grip-lines-vertical"></i>
               <span><strong>EN</strong></span>
               <i class="fa-solid fa-grip-lines-vertical"></i>
@@ -21,10 +25,9 @@
             </div>
 
             <div>
-              <span>Need Help?
-                <span class="material-symbols-outlined">
-                  expand_more
-                  </span>
+              <span
+                >Need Help?
+                <span class="material-symbols-outlined"> expand_more </span>
               </span>
             </div>
 
@@ -42,13 +45,17 @@
               <a href="">FWRD</a>
             </div>
             <div>
-              <span>search<span class="material-symbols-outlined">
-                search
-                </span></span>
+              <span
+                >search<span class="material-symbols-outlined">
+                  search
+                </span></span
+              >
 
-              <a href="">Wish List<span class="material-symbols-outlined">
-                favorite
-                </span></a>
+              <a href=""
+                >Wish List<span class="material-symbols-outlined">
+                  favorite
+                </span></a
+              >
               <a href="">My Bag</a>
             </div>
           </div>
