--- a/html/index.html
+++ b/html/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FRWD</title>
     <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
   </head>
   <body>
     <div id="container">
       <nav>
-        <!-- syed -->
+        <!--////////////////////////////////syed/////////////////////////////////////-->
         <section class="st-container">
           <div id="st-navP1">
             <div>
@@ -39,36 +41,121 @@
               <a href="">Mens</a>
             </div>
             <div>
-              <a href="">FWRD</a>
+              <a href="index.html">FWRD</a>
             </div>
             <div>
-              <span>search<span class="material-symbols-outlined">
-                search
-                </span></span>
+              <span>search<i class="fa-solid fa-magnifying-glass"></i></span>
 
-              <a href="">Wish List<span class="material-symbols-outlined">
-                favorite
-                </span></a>
+              <a href="">Wish List<i class="fa-regular fa-heart"></i></a>
               <a href="">My Bag</a>
             </div>
           </div>
 
-          <div id="st-navP3">
-            <strong>
-              <a href="new.html">new</a>
-              <a href="designer.html">designers</a>
-              <a href="clothing.html">clothing</a>
-              <a href="dresses.html">dresses</a>
-              <a href="shoes.html">shoes</a>
-              <a href="bags.html">bags</a>
-              <a href="accessories.html">accessories</a>
-              <a href="beauty.html">beauty</a>
-              <a href="sale.html">sale</a>
-              <a href="shops.html">shops</a>
-              <a href="Kendalls.html">kendall's edit</a>
-            </strong>
+          <div id="st-navP3" class="st-dropdown">
+            <div>
+              <div>
+                <a href="new.html">new</a>
+                <div class="st-content">
+                  <div>
+                    <img src="https://is4.fwrdassets.com/images/up/2024/February/020224_FW_NAV_BESTSELLERS_1x.jpg" alt="">
+                  </div>
+                  <div>
+                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_NewtoFWRD_1x.jpg" alt="">
+                  </div>
+                  <div>
+                    <span>new</span>
+                    <a href="">New This week</a>
+                    <a href="">New Last Week</a>
+                    <a href="">New This Month</a>
+                  </div>
+                  <div>
+                    <span>fwrd picks</span>
+                    <a href="#">kendall's piks</a>
+                    <a href="#">best sellers</a>
+                    <a href="#">exclusive</a>
+                    <a href="#">cou cou intimates</a>
+                    <a href="#">knwls</a>
+                    <a href="#">calle del mar</a>
+                  </div>
+                  <div>
+                    <span>trneding now</span>
+                    <a href="#">discreet chic</a>
+                    <a href="#">denim</a>
+                    <a href="#">spring shades</a>
+                    <a href="#">undressed femme</a>
+                    <a href="#">sheer elegance</a>
+                    <a href="#">totes</a>
+                    <a href="#">ballet flats</a>
+                  </div>
+                  <div>
+                    <span>everyday</span>
+                    <a href="#">wardrobe staples</a>
+                    <a href="#">vacation</a>
+                    <a href="#">date night</a>
+                    <a href="#">off-duty</a>
+                    <a href="#">swimwear</a>
+                    <a href="#">spring season</a>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <a href="designer.html">designers</a>
+                <div class="st-content">
+                  <div>
+                    <img src="https://is4.fwrdassets.com/images/up/2024/April/041524_FW_NAV_Burberry_1x.jpg" alt="">
+                  </div>
+                  <div>
+                    <img src="https://is4.fwrdassets.com/images/up/2024/April/050124_fw_loyalty3xattico_200x279.jpg" alt="">
+                  </div>
+                  <div>
+                    <span>featured designers</span>
+                    <a href="">acne stidios</a>
+                    <a href="">alaia</a>
+                    <a href="">balenciaga</a>
+                    <a href="">bode</a>
+                    <a href="">bootenfa veneta</a>
+                    <a href="">burberry</a>
+                    <a href="">chloe</a>
+                    <a href="">emilio pucci</a>
+                    <a href="">ferragemo</a>
+                  </div>
+                  <div>
+                    <a href="#">gabreila Hearst</a>
+                    <a href="#">givenchy</a>
+                    <a href="#">helsa</a>
+                    <a href="#">jacquemus</a>
+                    <a href="#">jean paul gualtier</a>
+                    <a href="#">khaite</a>
+                    <a href="#">loewe</a>
+                    <a href="#">manolo blahnik</a>
+                    <a href="#">miu miu</a>
+                  </div>
+                  <div>
+                    <a href="#">pre-owned</a>
+                    <a href="#">rick owners</a>
+                    <a href="#">saint laurent</a>
+                    <a href="#">the attico</a>
+                    <a href="#">the row</a>
+                    <a href="#">tom ford</a>
+                    <a href="#">valentino garavani</a>
+                    <a href="#"> versace</a>
+                    <a href="#">wardrobe.N</a>
+                  </div>
+                </div>
+              </div>
+              <div><a href="clothing.html">clothing</a></div>
+              <div><a href="dresses.html">dresses</a></div>
+              <div><a href="shoes.html">shoes</a></div>
+              <div><a href="bags.html">bags</a></div>
+              <div><a href="accessories.html">accessories</a></div>
+              <div><a href="beauty.html">beauty</a></div>
+              <div><a href="sale.html">sale</a></div>
+              <div><a href="shops.html">shops</a></div>
+              <div><a href="Kendalls.html">kendall's edit</a></div>
+            </div>
           </div>
         </section>
+        <!--////////////////////////////////syed/////////////////////////////////////-->
       </nav>
       <main>
         <!-- rahul and pradeep -->
@@ -136,3 +223,4 @@
   </body>
 </html>
 <script src="../index.js"></script>
+<script src="https://kit.fontawesome.com/b9d3c9efb7.js" crossorigin="anonymous"></script>
