--- a/html/Kendalls.html
+++ b/html/Kendalls.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FRWD</title>
     <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <div id="container">
@@ -14,7 +17,7 @@
         <section class="st-container">
           <div id="st-navP1">
             <div>
-              <span><img src="images/flag.png" alt="flag image"></span>
+              <span><img src="../images/flag.png" alt="flag image" /></span>
               <i class="fa-solid fa-grip-lines-vertical"></i>
               <span><strong>EN</strong></span>
               <i class="fa-solid fa-grip-lines-vertical"></i>
@@ -22,10 +25,9 @@
             </div>
 
             <div>
-              <span>Need Help?
-                <span class="material-symbols-outlined">
-                  expand_more
-                  </span>
+              <span
+                >Need Help?
+                <span class="material-symbols-outlined"> expand_more </span>
               </span>
             </div>
 
@@ -177,6 +179,10 @@
       </footer>
     </div>
   </body>
+  <script src="../index.js"></script>
 </html>
-<script src="../index.js"></script>
-<script src="https://kit.fontawesome.com/b9d3c9efb7.js" crossorigin="anonymous"></script>
+
+<script
+  src="https://kit.fontawesome.com/b9d3c9efb7.js"
+  crossorigin="anonymous"
+></script>
