--- a/html/index.html
+++ b/html/index.html
@@ -67,7 +67,7 @@
           <div id="st-navP3" class="st-dropdown">
             <div>
               <div>
-                <a href="new.html">new</a>
+                <a href="new.html" onclick="displayCards('new')">new</a>
                 <div class="st-content">
                   <div>
                     <img
@@ -97,7 +97,7 @@
                     <a href="#">calle del mar</a>
                   </div>
                   <div>
-                    <span>trneding now</span>
+                    <span>trending now</span>
                     <a href="#">discreet chic</a>
                     <a href="#">denim</a>
                     <a href="#">spring shades</a>
@@ -168,14 +168,16 @@
                   </div>
                 </div>
               </div>
-              <div><a href="clothing.html">clothing</a></div>
-              <div><a href="dresses.html">dresses</a></div>
-              <div><a href="shoes.html">shoes</a></div>
-              <div><a href="bags.html">bags</a></div>
-              <div><a href="accessories.html">accessories</a></div>
-              <div><a href="beauty.html">beauty</a></div>
-              <div><a href="sale.html">sale</a></div>
-              <div><a href="shops.html">shops</a></div>
+              <a href="new.html" onclick="displayCards('clothing')">clothing</a>
+              <a href="new.html" onclick="displayCards('dress')">dresses</a>
+              <a href="new.html" onclick="displayCards('shoes')">shoes</a>
+              <a href="new.html" onclick="displayCards('bags')">bags</a>
+              <a href="new.html" onclick="displayCards('accessories')"
+                >accessories</a
+              >
+              <a href="new.html" onclick="displayCards('beauty')">beauty</a>
+              <a href="new.html" onclick="displayCards('sale')">sale</a>
+              <a href="new.html" onclick="displayCards('shops')">shops</a>
               <div><a href="Kendalls.html">kendall's edit</a></div>
             </div>
           </div>
