--- a/html/signinup.html
+++ b/html/signinup.html
@@ -6,6 +6,7 @@
     <title>Sign in | Forward</title>
     <link rel="stylesheet" href="../style.css" />
   </head>
+
   <body>
     <div id="masignin">
       <p>FWRD</p>
@@ -77,5 +78,5 @@
       Please also read our <a href="" class="maclr">Privacy Policy</a>
     </p>
   </body>
-  <script src="../index.js"></script>
+  <script src="../signin.js"></script>
 </html>
