--- a/html/designer.html
+++ b/html/designer.html
@@ -54,16 +54,18 @@
 
           <div id="st-navP3">
             <strong>
-              <a href="new.html">new</a>
+              <a href="new.html" onclick="displayCards('new')">new</a>
               <a href="designer.html">designers</a>
-              <a href="clothing.html">clothing</a>
-              <a href="dresses.html">dresses</a>
-              <a href="shoes.html">shoes</a>
-              <a href="bags.html">bags</a>
-              <a href="accessories.html">accessories</a>
-              <a href="beauty.html">beauty</a>
-              <a href="sale.html">sale</a>
-              <a href="shops.html">shops</a>
+              <a href="new.html" onclick="displayCards('clothing')">clothing</a>
+              <a href="new.html" onclick="displayCards('dress')">dresses</a>
+              <a href="new.html" onclick="displayCards('shoes')">shoes</a>
+              <a href="new.html" onclick="displayCards('bags')">bags</a>
+              <a href="new.html" onclick="displayCards('accessories')"
+                >accessories</a
+              >
+              <a href="new.html" onclick="displayCards('beauty')">beauty</a>
+              <a href="new.html" onclick="displayCards('sale')">sale</a>
+              <a href="new.html" onclick="displayCards('shops')">shops</a>
               <a href="Kendalls.html">kendall's edit</a>
             </strong>
           </div>
