--- a/html/designer.html
+++ b/html/designer.html
@@ -54,18 +54,52 @@
 
           <div id="st-navP3">
             <strong>
-              <a href="new.html" onclick="displayCards('new')">new</a>
+              <a
+                href="new.html"
+                onclick="displayCards('new'); event.preventDefault();"
+                >new</a
+              >
               <a href="designer.html">designers</a>
-              <a href="new.html" onclick="displayCards('clothing')">clothing</a>
-              <a href="new.html" onclick="displayCards('dress')">dresses</a>
-              <a href="new.html" onclick="displayCards('shoes')">shoes</a>
-              <a href="new.html" onclick="displayCards('bags')">bags</a>
-              <a href="new.html" onclick="displayCards('accessories')"
+              <a
+                href="new.html"
+                onclick="displayCards('clothing'); event.preventDefault();"
+                >clothing</a
+              >
+              <a
+                href="new.html"
+                onclick="displayCards('dress'); event.preventDefault();"
+                >dresses</a
+              >
+              <a
+                href="new.html"
+                onclick="displayCards('shoes'); event.preventDefault();"
+                >shoes</a
+              >
+              <a
+                href="new.html"
+                onclick="displayCards('bags'); event.preventDefault();"
+                >bags</a
+              >
+              <a
+                href="new.html"
+                onclick="displayCards('accessories'); event.preventDefault();"
                 >accessories</a
               >
-              <a href="new.html" onclick="displayCards('beauty')">beauty</a>
-              <a href="new.html" onclick="displayCards('sale')">sale</a>
-              <a href="new.html" onclick="displayCards('shops')">shops</a>
+              <a
+                href="new.html"
+                onclick="displayCards('beauty'); event.preventDefault();"
+                >beauty</a
+              >
+              <a
+                href="new.html"
+                onclick="displayCards('sale'); event.preventDefault();"
+                >sale</a
+              >
+              <a
+                href="new.html"
+                onclick="displayCards('shops'); event.preventDefault();"
+                >shops</a
+              >
               <a href="Kendalls.html">kendall's edit</a>
             </strong>
           </div>
