--- a/html/index.html
+++ b/html/index.html
@@ -67,7 +67,11 @@
           <div id="st-navP3" class="st-dropdown">
             <div>
               <div>
-                <a href="new.html" onclick="displayCards('new')">new</a>
+                <a
+                  href="new.html"
+                  onclick="displayCards('new'); event.preventDefault();"
+                  >new</a
+                >
                 <div class="st-content">
                   <div>
                     <img
@@ -168,16 +172,46 @@
                   </div>
                 </div>
               </div>
-              <a href="new.html" onclick="displayCards('clothing')">clothing</a>
-              <a href="new.html" onclick="displayCards('dress')">dresses</a>
-              <a href="new.html" onclick="displayCards('shoes')">shoes</a>
-              <a href="new.html" onclick="displayCards('bags')">bags</a>
-              <a href="new.html" onclick="displayCards('accessories')"
+              <a
+                href="new.html"
+                onclick="displayCards('clothing'); event.preventDefault();"
+                >clothing</a
+              >
+              <a
+                href="new.html"
+                onclick="displayCards('dress'); event.preventDefault();"
+                >dresses</a
+              >
+              <a
+                href="new.html"
+                onclick="displayCards('shoes'); event.preventDefault();"
+                >shoes</a
+              >
+              <a
+                href="new.html"
+                onclick="displayCards('bags'); event.preventDefault();"
+                >bags</a
+              >
+              <a
+                href="new.html"
+                onclick="displayCards('accessories'); event.preventDefault();"
                 >accessories</a
               >
-              <a href="new.html" onclick="displayCards('beauty')">beauty</a>
-              <a href="new.html" onclick="displayCards('sale')">sale</a>
-              <a href="new.html" onclick="displayCards('shops')">shops</a>
+              <a
+                href="new.html"
+                onclick="displayCards('beauty'); event.preventDefault();"
+                >beauty</a
+              >
+              <a
+                href="new.html"
+                onclick="displayCards('sale'); event.preventDefault();"
+                >sale</a
+              >
+              <a
+                href="new.html"
+                onclick="displayCards('shops'); event.preventDefault();"
+                >shops</a
+              >
               <div><a href="Kendalls.html">kendall's edit</a></div>
             </div>
           </div>
