nvbar completed with hover effect

--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
 
           <div id="st-navP2">
             <div>
-              <button type="button" class="st-button">HOME</button>
+              <a href="index.html" id="st-button">HOME</a>
             </div>
             <div>
               <a href="index.html">FWRD</a>
@@ -57,15 +57,15 @@
             </div>
           </div>
 
-          <div id="st-navP3" class="st-dropdown">
-            <div>
+          <div id="st-navP3">
+            <div class="st-dropdown">
               <div>
                 <a
                   href="new.html"
                   onclick="displayCards('new'); event.preventDefault();"
                   >new</a
                 >
-                <div class="st-content st-newDD">
+                <div class="st-content st-newDD" id="">
                   <div>
                     <img
                       src="https://is4.fwrdassets.com/images/up/2024/February/020224_FW_NAV_BESTSELLERS_1x.jpg"
@@ -168,7 +168,7 @@
                 </div>
               </div>
               <div>
-                <a href="clothing.html">clothing</a>
+                <a href="new.html">clothing</a>
                 <div class="st-content st-clothingDD">
                   <div>
                     <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Clothing_1x.jpg" alt="">
@@ -215,7 +215,7 @@
                 </div>
               </div>
               <div>
-                <a href="dresses.html">dresses</a>
+                <a href="new.html">dresses</a>
                 <div class="st-content st-dressesDD">
                   <div>
                     <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Dresses_1x.jpg" alt="">
@@ -256,7 +256,7 @@
                 </div>
               </div>
               <div>
-                <a href="shoes.html">shoes</a>
+                <a href="new.html">shoes</a>
                 <div class="st-content st-shoesDD">
                   <div>
                     <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Shoes_1x.jpg" alt="">
@@ -290,7 +290,7 @@
                 </div>
               </div>
               <div>
-                <a href="bags.html">bags</a>
+                <a href="new.html">bags</a>
                 <div class="st-content st-bagsDD">
                   <div>
                     <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Bags_1x.jpg" alt="">
@@ -324,7 +324,7 @@
                 </div>
               </div>
               <div>
-                <a href="accessories.html">accessories</a>
+                <a href="new.html">accessories</a>
                 <div class="st-content st-accessoriesDD">
                   <div>
                     <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Accessories_1x.jpg" alt="">
@@ -355,7 +355,7 @@
                 </div>
               </div>
               <div>
-                <a href="beauty.html">beauty</a>
+                <a href="new.html">beauty</a>
                 <div class="st-content st-beautyDD">
                   <div>
                     <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Beauty_1x_r.jpg" alt="">
@@ -391,9 +391,9 @@
                   </div>
                 </div>
               </div>
-              <div><a href="sale.html">sale</a></div>
+              <div><a href="new.html">sale</a></div>
               <div>
-                <a href="shops.html">shops</a>
+                <a href="new.html">shops</a>
                 <div class="st-content st-shopsDD">
                   <div>
                     <img src="https://is4.fwrdassets.com/images/up/2024/April/042924_f_shops_thecottonshop_1X.jpg" alt="">
@@ -424,7 +424,7 @@
               </div>
               <div>
                 <a href="Kendalls.html">kendall's edit</a>
-                <div class="st-content st-shopsDD">
+                <div class="st-content st-kendallDD">
                   <div>
                     <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_KJEdit_1x.jpg" alt="">
                   </div>
@@ -436,47 +436,6 @@
                   </div>
                 </div>
               </div>
-              <a
-                href="new.html"
-                onclick="displayCards('clothing'); event.preventDefault();"
-                >clothing</a
-              >
-              <a
-                href="new.html"
-                onclick="displayCards('dress'); event.preventDefault();"
-                >dresses</a
-              >
-              <a
-                href="new.html"
-                onclick="displayCards('shoes'); event.preventDefault();"
-                >shoes</a
-              >
-              <a
-                href="new.html"
-                onclick="displayCards('bags'); event.preventDefault();"
-                >bags</a
-              >
-              <a
-                href="new.html"
-                onclick="displayCards('accessories'); event.preventDefault();"
-                >accessories</a
-              >
-              <a
-                href="new.html"
-                onclick="displayCards('beauty'); event.preventDefault();"
-                >beauty</a
-              >
-              <a
-                href="new.html"
-                onclick="displayCards('sale'); event.preventDefault();"
-                >sale</a
-              >
-              <a
-                href="new.html"
-                onclick="displayCards('shops'); event.preventDefault();"
-                >shops</a
-              >
-              <div><a href="Kendalls.html">kendall's edit</a></div>
             </div>
           </div>
         </section>
