--- a/html/designer.html
+++ b/html/designer.html
@@ -44,9 +44,12 @@
               <a href="index.html">FWRD</a>
             </div>
             <div>
-
               <span>
-                <input type="text" placeholder="search"><button class="st-button"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <input type="text" placeholder="search" /><button
+                  class="st-button"
+                >
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
               </span>
               <a href="">Wish List<i class="fa-regular fa-heart"></i></a>
               <a href="">My Bag</a>
@@ -164,13 +167,23 @@
                 </div>
               </div>
               <div>
-                <a href="new.html">clothing</a>
+                <a
+                  href="new.html"
+                  onclick="displayCards('clothing'); event.preventDefault();"
+                  >clothing</a
+                >
                 <div class="st-content st-clothingDD">
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Clothing_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Clothing_1x.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Clothing2_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Clothing2_1x.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
                     <span>shop by category</span>
@@ -211,10 +224,17 @@
                 </div>
               </div>
               <div>
-                <a href="new.html">dresses</a>
+                <a
+                  href="new.html"
+                  onclick="displayCards('dress'); event.preventDefault();"
+                  >dresses</a
+                >
                 <div class="st-content st-dressesDD">
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Dresses_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Dresses_1x.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
                     <span>shop by category</span>
@@ -252,13 +272,23 @@
                 </div>
               </div>
               <div>
-                <a href="new.html">shoes</a>
+                <a
+                  href="new.html"
+                  onclick="displayCards('shoes'); event.preventDefault();"
+                  >shoes</a
+                >
                 <div class="st-content st-shoesDD">
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Shoes_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Shoes_1x.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Shoes2_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Shoes2_1x.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
                     <span>shop by category</span>
@@ -286,13 +316,23 @@
                 </div>
               </div>
               <div>
-                <a href="new.html">bags</a>
+                <a
+                  href="new.html"
+                  onclick="displayCards('bags'); event.preventDefault();"
+                  >bags</a
+                >
                 <div class="st-content st-bagsDD">
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Bags_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Bags_1x.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Bags2_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Bags2_1x.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
                     <span>shop by category</span>
@@ -320,10 +360,17 @@
                 </div>
               </div>
               <div>
-                <a href="new.html">accessories</a>
+                <a
+                  href="new.html"
+                  onclick="displayCards('accessories'); event.preventDefault();"
+                  >accessories</a
+                >
                 <div class="st-content st-accessoriesDD">
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Accessories_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Accessories_1x.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
                     <span>shop by category</span>
@@ -351,13 +398,23 @@
                 </div>
               </div>
               <div>
-                <a href="new.html">beauty</a>
+                <a
+                  href="new.html"
+                  onclick="displayCards('beauty'); event.preventDefault();"
+                  >beauty</a
+                >
                 <div class="st-content st-beautyDD">
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Beauty_1x_r.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Beauty_1x_r.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Beauty2_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Beauty2_1x.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
                     <span>shop by category</span>
@@ -389,13 +446,23 @@
               </div>
               <div><a href="new.html">sale</a></div>
               <div>
-                <a href="new.html">shops</a>
+                <a
+                  href="new.html"
+                  onclick="displayCards('shops'); event.preventDefault();"
+                  >shops</a
+                >
                 <div class="st-content st-shopsDD">
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/April/042924_f_shops_thecottonshop_1X.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/April/042924_f_shops_thecottonshop_1X.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Shops2_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_Shops2_1x.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
                     <span>shop by trend</span>
@@ -422,13 +489,22 @@
                 <a href="Kendalls.html">kendall's edit</a>
                 <div class="st-content st-kendallDD">
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_KJEdit_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_KJEdit_1x.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2023/December/010124_f_shops_aspen_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2023/December/010124_f_shops_aspen_1x.jpg"
+                      alt=""
+                    />
                   </div>
                   <div>
-                    <img src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_TheLooks_1x.jpg" alt="">
+                    <img
+                      src="https://is4.fwrdassets.com/images/up/2024/March/032224_FW_NAV_TheLooks_1x.jpg"
+                      alt=""
+                    />
                   </div>
                 </div>
               </div>
