stored logged user to local storage and added event listener to all cards

--- a/html/new.html
+++ b/html/new.html
@@ -44,7 +44,7 @@
               <a href="index.html">FWRD</a>
             </div>
             <div>
-              <span>
+              <span id="span">
                 <input
                   type="text"
                   placeholder="search"
