shops page done with hover effect but functionality remaining

--- a/html/designer.html
+++ b/html/designer.html
@@ -447,7 +447,7 @@
               <div><a href="new.html">sale</a></div>
               <div>
                 <a
-                  href="new.html"
+                  href="shops.html"
                   onclick="displayCards('shops'); event.preventDefault();"
                   >shops</a
                 >
