--- a/html/new.html
+++ b/html/new.html
@@ -453,7 +453,7 @@
               </div>
               <div>
                 <a
-                  href="new.html"
+                  href="shops.html"
                   onclick="displayCards('shops'); event.preventDefault();"
                   >shops</a
                 >
