done with designer page

--- a/html/designer.html
+++ b/html/designer.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <script src="https://kit.fontawesome.com/d72375f458.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="container">
@@ -513,8 +514,26 @@
         </section>
         <!--////////////////////////////////syed/////////////////////////////////////-->
       </nav>
-      <main>
+      <main id="deepMain">
         <!-- rahul and pradeep -->
+
+        <div id="deepSideBar">
+          <a href="">All Designers</a>
+          <a href="">Clothing</a>
+          <a href="">Bags</a>
+          <a href="">Shoes</a>
+          <a href="">Jewelry</a>
+          <a href="">Accessories</a>
+          <a href="">Beauty</a>
+          <a href="">Home</a>
+          <a href="">Pre-Owned</a>
+        </div>
+        <div id="deepDesigner">
+          
+        </div>
+
+
+
       </main>
 
       <footer>
@@ -577,7 +596,10 @@
       </footer>
     </div>
   </body>
-  <script src="../index.js"></script>
+  <!-- <script src="../index.js"></script> -->
+
+  <script src="../script.js"></script>
+
 </html>
 
 <script
