cart page created

--- a/html/index.html
+++ b/html/index.html
@@ -519,7 +519,7 @@
         </section>
         <!--////////////////////////////////syed's work ends /////////////////////////////////////-->
       </nav>
-      <main>
+      <main id="Rmain">
         <!-- rahul and pradeep -->
         <div id="rpCard1">
           <img
