wishlist and mydesigners page done

--- a/html/index.html
+++ b/html/index.html
@@ -55,8 +55,10 @@
                   <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
               </span>
-              <a href="">Wish List<i class="fa-regular fa-heart"></i></a>
-              <a href="">My Bag</a>
+              <a href="wishlist.html"
+                >Wish List<i class="fa-regular fa-heart"></i
+              ></a>
+              <a href="bag.html">My Bag</a>
             </div>
           </div>
 
