--- a/html/wishlist.html
+++ b/html/wishlist.html
@@ -56,8 +56,10 @@
                   <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
               </span>
-              <a href="">Wish List<i class="fa-regular fa-heart"></i></a>
-              <a href="">My Bag</a>
+              <a href="wishlist.html"
+                >Wish List<i class="fa-regular fa-heart"></i
+              ></a>
+              <a href="bag.html">My Bag</a>
             </div>
           </div>
 
@@ -534,7 +536,7 @@
           <a href="#" value="mydesigners" id="mydesigners">My Designers</a>
         </div>
       </div>
-
+      <div id="wishcontainer"></div>
       <footer>
         <!-- mahesh -->
         <div id="mafoot1">
@@ -596,7 +598,7 @@
     </section>
   </body>
 
-  <script src="../index.js"></script>
+  <script src="../wish.js"></script>
   <script
     src="https://kit.fontawesome.com/b9d3c9efb7.js"
     crossorigin="anonymous"
