--- a/html/designer.html
+++ b/html/designer.html
@@ -9,7 +9,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <script src="https://kit.fontawesome.com/d72375f458.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d72375f458.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="container">
@@ -52,8 +55,10 @@
                   <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
               </span>
-              <a href="">Wish List<i class="fa-regular fa-heart"></i></a>
-              <a href="">My Bag</a>
+              <a href="wishlist.html"
+                >Wish List<i class="fa-regular fa-heart"></i
+              ></a>
+              <a href="bag.html">My Bag</a>
             </div>
           </div>
 
@@ -528,12 +533,7 @@
           <a href="">Home</a>
           <a href="">Pre-Owned</a>
         </div>
-        <div id="deepDesigner">
-          
-        </div>
-
-
-
+        <div id="deepDesigner"></div>
       </main>
 
       <footer>
@@ -599,7 +599,6 @@
   <!-- <script src="../index.js"></script> -->
 
   <script src="../script.js"></script>
-
 </html>
 
 <script
